--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,13 @@
 {
-    "name": "lightna/lightna.magento-frontend",
+    "name": "lightna/magento-frontend",
     "description": "Lightna Magento Frontend module",
     "type": "library",
     "license": "MIT",
-    "version": "1.0.9",
+    "version": "1.0.10",
     "require": {
-        "lightna/lightna.magento-backend": "^1.0.9",
-        "lightna/lightna.session": "^1.0.9",
-        "lightna/lightna.tailwind": "^1.0.9",
-        "lightna/lightna.webpack": "^1.0.9",
-        "lightna/lightna.elasticsearch": "^1.0.9"
+        "lightna/magento-backend": "^1.0.10",
+        "lightna/session": "^1.0.10",
+        "lightna/tailwind": "^1.0.10",
+        "lightna/webpack": "^1.0.10"
     }
 }
