--- a/layout/category.yaml
+++ b/layout/category.yaml
@@ -13,6 +13,7 @@ extends:
     .content:
       container: div
       .details:
+        id: category-details
         template: lightna/magento-frontend/category/details.phtml
       .columns:
         container: div
@@ -23,9 +24,11 @@ extends:
             - md:gap-12
             - md:grid-cols-[280px_1fr]
         .facets:
+          id: facets
           template: lightna/magento-frontend/category/facets.phtml
           .toggle-facets:
             template: lightna/magento-frontend/component/toggle-link.phtml
         .result:
+          id: products-grid
           template: lightna/magento-frontend/category/result.phtml
           .item: component/product/tile.yaml
