--- a/layout/component/product/tile.yaml
+++ b/layout/component/product/tile.yaml
@@ -8,15 +8,22 @@ attributes:
     class:
       - product-tile__top
   .image:
+    id: product-tile-image
     template: lightna/magento-frontend/component/product/tile/image.phtml
+    image:
+      tile:
+        width: 285
+        height: 354
 .bottom:
   container: div
   attributes:
     class:
       - product-tile__bottom
   .sku:
+    id: product-tile-sku
     template: lightna/magento-frontend/product/attributes/sku.phtml
   .name:
+    id: product-tile-name
     template: lightna/magento-frontend/component/product/tile/name.phtml
   .price-container:
     container: div
@@ -24,4 +31,5 @@ attributes:
       class:
         - product-tile__price
     .price:
+      id: product-tile-price
       template: lightna/magento-frontend/component/product/price.phtml
