--- a/layout/product.yaml
+++ b/layout/product.yaml
@@ -123,6 +123,15 @@ extends:
           title: "Specifications"
           template: lightna/magento-frontend/product/attributes/all-visible.phtml
     .related-products:
-      id: related-products
-      template: lightna/magento-frontend/product/related.phtml
-      .item: component/product/tile.yaml
+      template: lightna/magento-frontend/product/related/container.phtml
+      .product-placeholder:
+        template: lightna/magento-frontend/product/related/product-placeholder.phtml
+        max: 4
+        attributes:
+          class: [ cjs-lazy, products-placeholder ]
+          data-lazy-block-id: related-products
+      .product-grid:
+        id: related-products
+        type: lazy
+        template: lightna/magento-frontend/product/related/product-grid.phtml
+        .item: component/product/tile.yaml
