--- a/webpack.yaml
+++ b/webpack.yaml
@@ -2,10 +2,12 @@ entry:
   common:
     component:
       magento-common-click-delegator: lightna/magento-frontend/common/ClickEventDelegator
+      magento-common-lazy-content: lightna/magento-frontend/common/LazyContent
       magento-common-menu: lightna/magento-frontend/common/Menu
       magento-common-mobile-overlay: lightna/magento-frontend/common/MobileOverlay
       magento-common-mini-cart: lightna/magento-frontend/common/MiniCart
       magento-common-add-to-cart: lightna/magento-frontend/common/AddToCart
+      magento-common-carousel: lightna/magento-frontend/common/Carousel
       magento-common-collapsible: lightna/magento-frontend/common/Collapsible
       magento-common-tabs: lightna/magento-frontend/common/Tabs
       magento-common-search: lightna/magento-frontend/common/Search
