--- a/tailwind.yaml
+++ b/tailwind.yaml
@@ -88,6 +88,7 @@ entry:
       tailwind-utilities: tailwindcss/utilities
       # Base
       magento-base-icons: lightna/magento-frontend/base/icons.css
+      magento-base-buttons: lightna/magento-frontend/base/buttons.css
       # Components
       magento-component-collapsible: lightna/magento-frontend/component/collapsible.css
       magento-component-pagination: lightna/magento-frontend/component/pagination.css
@@ -98,6 +99,7 @@ entry:
       magento-component-product-grid: lightna/magento-frontend/component/product/grid.css
       ## Listing
       magento-component-listing-facets: lightna/magento-frontend/component/listing/facets.css
+      magento-component-listing-sorting: lightna/magento-frontend/component/listing/sorting.css
       # Page
       magento-page-category: lightna/magento-frontend/page/category.css
 tailwind:
